--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -5,3 +5,15 @@ NotEmpty.User.email="Email không được rỗng"
 Email.User.email="Email không đúng định dạng"
 NotNull.User.admin="Chưa chọn quyền"
 NotEmpty.User.Fullname="Fullname Không được rỗng"
+NotEmpty.Product.name="Name Không được rỗng"
+NotNull.Product.price="Giá không được null"
+DecimalMin.Product.price=Giá phải lớn hơn {value}.
+NotEmpty.Product.image="image Không được rỗng"
+NotEmpty.Product.category=Vui lòng chọn một danh mục
+NotNull.Inventory.date="Ngày không được null"
+NotNull.Inventory.quantity="Số lượng không được null"
+NotEmpty.Inventory.product=Vui lòng chọn một danh mục
+Min.Inventory.quantity=Số lượng phải lớn hơn {value}.
+NotNull.Discount.discountAmount="Giá không được null"
+DecimalMin.Discount.discountAmount=Giá phải lớn hơn {value}.
+NotEmpty.Discount.product=Vui lòng chọn một danh mục
